@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Routine Libraries" version="2.4.0" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Routine Libraries" version="2.4.1" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
         <import addon="script.module.kodi-six" version="0.0.2"/>
@@ -11,34 +11,10 @@
         <platform>all</platform>
         <license>GNU GENERAL PUBLIC LICENSE. Version 3, 29 June 2007</license>
         <source>https://github.com/Twilight0/script.module.tulip</source>
-        <news>[B]2.3.X[/B]
-- Add function (directory) can now set plugin category for skins to display
-- Changed all "BaseException" into "Exception"
-- Replaced builtin eval with ast.literaleval which is more secure
-- Added the fuzzywuzzy library for fuzzy string matching
-- Moved all user agent related functions and strings into new user_agent module
-- Added datetime keys for youtube videos
-- Compat module enhancements
-- Cleantitle module enhancements
-- Request function enhancements for python 3
-- Directory module bugfixes
-- Added replace xml codes function
-- Youtube module performance tweaks
-- Update m3u8 modules (thanks globocom)
-- Update user agent strings
-- Various other tweaks
-
-[B]2.2.X[/B]
-- Reincluded url_dispatcher module for addons that may use it in the future
-- New reload skin function
-- Log exception on client function upon failure
-- xbmc.Playlist is now callable via lambda function. Mode 1 for video (default), Mode 0 for audio
-- Add function in directory module now accepts streaminfo data (as dictionary)
-- Add function can also form a playlist instead of directory only
-- Add function can show background progress when loading items
-- Added StringIO in compat module
-- Plugin url optimization with join string method on directory module
-- m3u_maker renamed to playlist_maker
-- Added tvg-logo parameter into playlist_maker</news>
+        <news>[B]2.4.X[/B]
+- User agents module tweaks
+- Addition of ability to autoplay through a playlist mode
+- Added some debug logging for client.request and directory.add
+- Minor other tweaks</news>
     </extension>
 </addon>
