@@ -220,15 +220,15 @@ class youtube(object):
 
                 duration = 0
                 try:
-                    duration += 60 * 60 * int(re.findall('(\d*)H', d)[0])
+                    duration += 60 * 60 * int(re.findall(r'(\d*)H', d)[0])
                 except Exception:
                     pass
                 try:
-                    duration += 60 * int(re.findall('(\d*)M', d)[0])
+                    duration += 60 * int(re.findall(r'(\d*)M', d)[0])
                 except Exception:
                     pass
                 try:
-                    duration += int(re.findall('(\d*)S', d)[0])
+                    duration += int(re.findall(r'(\d*)S', d)[0])
                 except Exception:
                     pass
                 duration = str(duration)
