@@ -2,6 +2,7 @@
 - User agents module tweaks
 - Addition of ability to autoplay through a playlist mode
 - Added some debug logging for client.request and directory.add
+- Minor other tweaks
 
 [B]2.3.X[/B]
 - Add function (directory) can now set plugin category for skins to display
